# quantlib-rs

./: .gitignore  Cargo.toml  INSTRUCTIONS.md  LICENSE  README.md  clippy.toml  flake.nix  justfile  plan.md
.github/: copilot-instructions.md
crates/ql-cashflows/: Cargo.toml
crates/ql-cashflows/src/: cashflow.rs  cashflows.rs  coupon.rs  fixed_rate_coupon.rs  floating_rate_coupon.rs  inflation_coupon.rs  lib.rs
crates/ql-core/: Cargo.toml
crates/ql-core/src/: compounding.rs  errors.rs  handle.rs  lib.rs  position.rs  settings.rs  time_series.rs
crates/ql-core/src/patterns/: lazy_object.rs  mod.rs  observable.rs  singleton.rs  visitor.rs
crates/ql-core/src/utilities/: clone.rs  data_formatters.rs  data_parsers.rs  mod.rs  null.rs
crates/ql-currencies/: Cargo.toml
crates/ql-currencies/src/: currencies_old.rs  currency.rs  exchange_rate.rs  lib.rs
crates/ql-currencies/src/currencies/: africa.rs  america.rs  asia.rs  crypto.rs  europe.rs  mod.rs  oceania.rs
crates/ql-experimental/: Cargo.toml
crates/ql-experimental/src/: lib.rs  noarb_sabr.rs  zabr.rs
crates/ql-experimental/src/catbonds/: cat_risk.rs  mod.rs  notional_risk.rs
crates/ql-experimental/src/exoticoptions/: bivariate_normal.rs  complex_chooser.rs  compound_option.rs  holder_extensible.rs  mod.rs  simple_chooser.rs  two_asset_correlation.rs  writer_extensible.rs
crates/ql-experimental/src/variance_option/: engine.rs  mod.rs
crates/ql-experimental/src/variancegamma/: engine.rs  mod.rs  model.rs
crates/ql-indexes/: Cargo.toml
crates/ql-indexes/src/: ibor.rs  ibor_index.rs  index.rs  inflation.rs  interest_rate_index.rs  lib.rs  overnight.rs  overnight_index.rs  swap_index.rs
crates/ql-instruments/: Cargo.toml
crates/ql-instruments/src/: bond.rs  exercise.rs  instrument.rs  lib.rs  option.rs  payoff.rs  swap.rs  zero_coupon_inflation_swap.rs
crates/ql-legacy/: Cargo.toml
crates/ql-legacy/src/: lib.rs
crates/ql-math/: Cargo.toml
crates/ql-math/benches/: interpolation.rs
crates/ql-math/src/: array.rs  comparison.rs  lib.rs  linear_least_squares.rs  matrix.rs  matrix_utilities.rs  rounding.rs
crates/ql-math/src/copulas/: mod.rs
crates/ql-math/src/distributions/: beta.rs  binomial.rs  chi_square.rs  gamma.rs  mod.rs  normal.rs  poisson.rs  student_t.rs
crates/ql-math/src/integrals/: discrete.rs  gaussianquadratures.rs  mod.rs  tanhsinh.rs
crates/ql-math/src/interpolations/: akima.rs  bicubic.rs  bilinear.rs  chebyshev.rs  cubic.rs  log_cubic.rs  mod.rs  monotone_cubic.rs  sabr.rs
crates/ql-math/src/ode/: mod.rs
crates/ql-math/src/optimization/: bfgs.rs  mod.rs
crates/ql-math/src/random_numbers/: brownian_bridge.rs  mod.rs  sobol.rs
crates/ql-math/src/solvers1d/: mod.rs
crates/ql-math/src/statistics/: mod.rs
crates/ql-methods/: Cargo.toml
crates/ql-methods/benches/: monte_carlo.rs
crates/ql-methods/src/: lib.rs
crates/ql-methods/src/finite_differences/: mod.rs
crates/ql-methods/src/lattice/: binomial_tree.rs  mod.rs  trinomial_tree.rs
crates/ql-methods/src/monte_carlo/: mod.rs
crates/ql-models/: Cargo.toml
crates/ql-models/src/: bates_model.rs  black_karasinski.rs  calibrated_model.rs  cox_ingersoll_ross.rs  g2_model.rs  heston_model.rs  hull_white_model.rs  lib.rs  short_rate_model.rs  vasicek.rs
crates/ql-pricingengines/: Cargo.toml
crates/ql-pricingengines/benches/: pricing.rs
crates/ql-pricingengines/src/: analytic_barrier_engine.rs  analytic_european_engine.rs  analytic_heston_engine.rs  barone_adesi_whaley_engine.rs  discounting_bond_engine.rs  discounting_swap_engine.rs  lib.rs
crates/ql-processes/: Cargo.toml
crates/ql-processes/src/: bates_process.rs  black_scholes_process.rs  g2_process.rs  geometric_brownian_motion.rs  gsr_process.rs  heston_process.rs  hull_white_forward_process.rs  hull_white_process.rs  lib.rs  merton76_process.rs  ornstein_uhlenbeck_process.rs  square_root_process.rs  stochastic_process.rs  variance_gamma_process.rs
crates/ql-quotes/: Cargo.toml
crates/ql-quotes/src/: lib.rs  quote.rs
crates/ql-termstructures/: Cargo.toml
crates/ql-termstructures/src/: black_variance_surface.rs  black_vol_term_structure.rs  default_probability_term_structure.rs  flat_forward.rs  inflation_term_structure.rs  interpolated_discount_curve.rs  interpolated_forward_curve.rs  interpolated_zero_curve.rs  lib.rs  local_vol_surface.rs  local_vol_term_structure.rs  piecewise_yield_curve.rs  rate_helpers.rs  smile_calibration.rs  smile_section.rs  term_structure.rs  volatility_term_structure.rs  yield_term_structure.rs
crates/ql-time/: Cargo.toml
crates/ql-time/src/: asx.rs  business_day_convention.rs  calendar.rs  date.rs  day_counter.rs  ecb.rs  frequency.rs  imm.rs  interest_rate.rs  lib.rs  month.rs  period.rs  schedule.rs  time_unit.rs  weekday.rs
crates/ql-time/src/calendars/: argentina.rs  australia.rs  austria.rs  bespoke_calendar.rs  botswana.rs  brazil.rs  canada.rs  chile.rs  china.rs  czech_republic.rs  denmark.rs  finland.rs  france.rs  germany.rs  hong_kong.rs  hungary.rs  iceland.rs  india.rs  indonesia.rs  israel.rs  italy.rs  japan.rs  joint_calendar.rs  mexico.rs  mod.rs  new_zealand.rs  norway.rs  poland.rs  romania.rs  russia.rs  saudi_arabia.rs  singapore.rs  slovakia.rs  south_africa.rs  south_korea.rs  sweden.rs  switzerland.rs  taiwan.rs  target.rs  thailand.rs  (+4 more)
crates/ql-time/tests/: test_calendars.rs  test_dates.rs  test_day_counters.rs  test_schedule.rs
quantlib/: Cargo.toml
quantlib/src/: lib.rs
