[package]
name = "quantlib"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "BSD-3-Clause"
repository = "https://github.com/SPRAGE/quantlib-rs"
description = "A complete Rust translation of the QuantLib quantitative finance library"
keywords = ["quantitative-finance", "derivatives", "pricing", "risk", "fixed-income"]
categories = ["finance", "mathematics", "science"]

[dependencies]
ql-core = { path = "../crates/ql-core" }
ql-time = { path = "../crates/ql-time" }
ql-math = { path = "../crates/ql-math" }
ql-currencies = { path = "../crates/ql-currencies" }
ql-quotes = { path = "../crates/ql-quotes" }
ql-indexes = { path = "../crates/ql-indexes" }
ql-termstructures = { path = "../crates/ql-termstructures" }
ql-processes = { path = "../crates/ql-processes" }
ql-models = { path = "../crates/ql-models" }
ql-methods = { path = "../crates/ql-methods" }
ql-cashflows = { path = "../crates/ql-cashflows" }
ql-instruments = { path = "../crates/ql-instruments" }
ql-pricingengines = { path = "../crates/ql-pricingengines" }
ql-experimental = { path = "../crates/ql-experimental" }
ql-legacy = { path = "../crates/ql-legacy" }

[dev-dependencies]
approx = "0.5"
