[package]
name = "ql-cashflows"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Cash flow, coupon, and leg definitions for quantlib-rs"

[dependencies]
ql-core.workspace = true
ql-time.workspace = true
ql-math.workspace = true
ql-indexes.workspace = true
ql-termstructures.workspace = true

[dev-dependencies]
approx.workspace = true
