[package]
name = "ql-cashflows"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "BSD-3-Clause"
repository = "https://github.com/SPRAGE/quantlib-rs"
description = "Cash flow, coupon, and leg definitions for quantlib-rs"

[dependencies]
ql-core.workspace = true
ql-time.workspace = true
ql-math.workspace = true
ql-indexes.workspace = true
ql-termstructures.workspace = true

[dev-dependencies]
approx.workspace = true
ql-currencies.workspace = true
