[package]
name = "ql-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types, traits, and error definitions for quantlib-rs"

[dependencies]
thiserror.workspace = true
num-traits.workspace = true

[dev-dependencies]
approx.workspace = true
proptest.workspace = true
