[package]
name = "ql-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "BSD-3-Clause"
repository = "https://github.com/SPRAGE/quantlib-rs"
description = "Core types, traits, and error definitions for quantlib-rs"

[dependencies]
thiserror.workspace = true
num-traits.workspace = true

[dev-dependencies]
approx.workspace = true
proptest.workspace = true
