[package]
name = "ql-currencies"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "BSD-3-Clause"
repository = "https://github.com/SPRAGE/quantlib-rs"
description = "Currency definitions for quantlib-rs"

[dependencies]
ql-core = { path = "../ql-core" }

[dev-dependencies]
approx = "0.5"
