[package]
name = "ql-experimental"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "BSD-3-Clause"
repository = "https://github.com/SPRAGE/quantlib-rs"
description = "Experimental / unstable modules for quantlib-rs"

[dependencies]
ql-core.workspace = true
ql-time.workspace = true
ql-math.workspace = true
ql-termstructures.workspace = true
ql-instruments.workspace = true
ql-pricingengines.workspace = true
ql-processes.workspace = true
rand.workspace = true
rand_distr.workspace = true
num-complex.workspace = true

[dev-dependencies]
approx.workspace = true
