[package]
name = "ql-experimental"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "BSD-3-Clause"
repository = "https://github.com/SPRAGE/quantlib-rs"
description = "Experimental / unstable modules for quantlib-rs"

[dependencies]
ql-core = { path = "../ql-core" }
ql-time = { path = "../ql-time" }
ql-math = { path = "../ql-math" }
ql-termstructures = { path = "../ql-termstructures" }
ql-instruments = { path = "../ql-instruments" }
ql-pricingengines = { path = "../ql-pricingengines" }
ql-processes = { path = "../ql-processes" }
rand = "0.8"
rand_distr = "0.4"
num-complex = "0.4"

[dev-dependencies]
approx = "0.5"
