[package]
name = "ql-indexes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Market index definitions (interest rate, inflation, equity) for quantlib-rs"

[dependencies]
ql-core.workspace = true
ql-time.workspace = true
ql-currencies.workspace = true

[dev-dependencies]
approx.workspace = true
