[package]
name = "ql-indexes"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "BSD-3-Clause"
repository = "https://github.com/SPRAGE/quantlib-rs"
description = "Market index definitions (interest rate, inflation, equity) for quantlib-rs"

[dependencies]
ql-core = { path = "../ql-core" }
ql-time = { path = "../ql-time" }
ql-currencies = { path = "../ql-currencies" }

[dev-dependencies]
approx = "0.5"
