[package]
name = "ql-math"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Mathematical utilities, interpolation, optimization, and RNG for quantlib-rs"

[dependencies]
ql-core.workspace = true
thiserror.workspace = true
num-traits.workspace = true
nalgebra.workspace = true
statrs.workspace = true
rand.workspace = true
rand_distr.workspace = true
rand_mt.workspace = true

[dev-dependencies]
approx.workspace = true
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "interpolation"
harness = false
