[package]
name = "ql-math"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "BSD-3-Clause"
repository = "https://github.com/SPRAGE/quantlib-rs"
description = "Mathematical utilities, interpolation, optimization, and RNG for quantlib-rs"

[dependencies]
ql-core.workspace = true
thiserror.workspace = true
num-traits.workspace = true
nalgebra.workspace = true
statrs.workspace = true
rand.workspace = true
rand_distr.workspace = true
rand_mt.workspace = true

[dev-dependencies]
approx.workspace = true
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "interpolation"
harness = false
