[package]
name = "ql-math"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "BSD-3-Clause"
repository = "https://github.com/SPRAGE/quantlib-rs"
description = "Mathematical utilities, interpolation, optimization, and RNG for quantlib-rs"

[dependencies]
ql-core = { path = "../ql-core" }
thiserror = "2"
num-traits = "0.2"
nalgebra = "0.33"
statrs = "0.17"
rand = "0.8"
rand_distr = "0.4"
rand_mt = "4"

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "interpolation"
harness = false
