[package]
name = "ql-methods"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Numerical methods (lattices, finite differences, Monte Carlo) for quantlib-rs"

[dependencies]
ql-core.workspace = true
ql-time.workspace = true
ql-math.workspace = true
ql-processes.workspace = true
ql-termstructures.workspace = true

[dev-dependencies]
approx.workspace = true
criterion.workspace = true
proptest.workspace = true
ql-instruments = { path = "../ql-instruments" }
ql-pricingengines = { path = "../ql-pricingengines" }

[[bench]]
name = "monte_carlo"
harness = false
