[package]
name = "ql-methods"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "BSD-3-Clause"
repository = "https://github.com/SPRAGE/quantlib-rs"
description = "Numerical methods (lattices, finite differences, Monte Carlo) for quantlib-rs"

[dependencies]
ql-core.workspace = true
ql-time.workspace = true
ql-math.workspace = true
ql-processes.workspace = true
ql-termstructures.workspace = true

[dev-dependencies]
approx.workspace = true
criterion.workspace = true
proptest.workspace = true
ql-instruments = { path = "../ql-instruments" }
ql-pricingengines = { path = "../ql-pricingengines" }

[[bench]]
name = "monte_carlo"
harness = false
