[package]
name = "ql-methods"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "BSD-3-Clause"
repository = "https://github.com/SPRAGE/quantlib-rs"
description = "Numerical methods (lattices, finite differences, Monte Carlo) for quantlib-rs"

[dependencies]
ql-core = { path = "../ql-core" }
ql-time = { path = "../ql-time" }
ql-math = { path = "../ql-math" }
ql-processes = { path = "../ql-processes" }
ql-termstructures = { path = "../ql-termstructures" }

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
ql-instruments = { path = "../ql-instruments" }
ql-pricingengines = { path = "../ql-pricingengines" }

[[bench]]
name = "monte_carlo"
harness = false
