[package]
name = "ql-models"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Calibratable financial models for quantlib-rs"

[dependencies]
ql-core.workspace = true
ql-time.workspace = true
ql-math.workspace = true
ql-processes.workspace = true
ql-termstructures.workspace = true

[dev-dependencies]
approx.workspace = true
proptest.workspace = true
