[package]
name = "ql-pricingengines"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Pricing engine implementations for quantlib-rs"

[dependencies]
ql-core.workspace = true
ql-time.workspace = true
ql-math.workspace = true
ql-cashflows.workspace = true
ql-instruments.workspace = true
ql-termstructures.workspace = true
ql-processes.workspace = true
ql-models.workspace = true
ql-methods.workspace = true

[dev-dependencies]
approx.workspace = true
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "pricing"
harness = false
