[package]
name = "ql-pricingengines"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "BSD-3-Clause"
repository = "https://github.com/SPRAGE/quantlib-rs"
description = "Pricing engine implementations for quantlib-rs"

[dependencies]
ql-core.workspace = true
ql-time.workspace = true
ql-math.workspace = true
ql-cashflows.workspace = true
ql-instruments.workspace = true
ql-termstructures.workspace = true
ql-processes.workspace = true
ql-models.workspace = true
ql-methods.workspace = true

[dev-dependencies]
approx.workspace = true
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "pricing"
harness = false
