[package]
name = "ql-pricingengines"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "BSD-3-Clause"
repository = "https://github.com/SPRAGE/quantlib-rs"
description = "Pricing engine implementations for quantlib-rs"

[dependencies]
ql-core = { path = "../ql-core" }
ql-time = { path = "../ql-time" }
ql-math = { path = "../ql-math" }
ql-cashflows = { path = "../ql-cashflows" }
ql-instruments = { path = "../ql-instruments" }
ql-termstructures = { path = "../ql-termstructures" }
ql-processes = { path = "../ql-processes" }
ql-models = { path = "../ql-models" }
ql-methods = { path = "../ql-methods" }

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "pricing"
harness = false
