[package]
name = "ql-processes"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "BSD-3-Clause"
repository = "https://github.com/SPRAGE/quantlib-rs"
description = "Stochastic process definitions for quantlib-rs"

[dependencies]
ql-core = { path = "../ql-core" }
ql-time = { path = "../ql-time" }
ql-math = { path = "../ql-math" }
ql-termstructures = { path = "../ql-termstructures" }

[dev-dependencies]
approx = "0.5"
proptest = "1"
