[package]
name = "ql-quotes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Market quotes and observable values for quantlib-rs"

[dependencies]
ql-core.workspace = true

[dev-dependencies]
approx.workspace = true
