[package]
name = "ql-quotes"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "BSD-3-Clause"
repository = "https://github.com/SPRAGE/quantlib-rs"
description = "Market quotes and observable values for quantlib-rs"

[dependencies]
ql-core.workspace = true

[dev-dependencies]
approx.workspace = true
