[package]
name = "ql-termstructures"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Yield, volatility, and other term structure implementations for quantlib-rs"

[dependencies]
ql-core.workspace = true
ql-time.workspace = true
ql-math.workspace = true
ql-quotes.workspace = true

[dev-dependencies]
approx.workspace = true
proptest.workspace = true
