[package]
name = "ql-termstructures"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "BSD-3-Clause"
repository = "https://github.com/SPRAGE/quantlib-rs"
description = "Yield, volatility, and other term structure implementations for quantlib-rs"

[dependencies]
ql-core.workspace = true
ql-time.workspace = true
ql-math.workspace = true
ql-quotes.workspace = true

[dev-dependencies]
approx.workspace = true
proptest.workspace = true
