[package]
name = "ql-termstructures"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "BSD-3-Clause"
repository = "https://github.com/SPRAGE/quantlib-rs"
description = "Yield, volatility, and other term structure implementations for quantlib-rs"

[dependencies]
ql-core = { path = "../ql-core" }
ql-time = { path = "../ql-time" }
ql-math = { path = "../ql-math" }
ql-quotes = { path = "../ql-quotes" }

[dev-dependencies]
approx = "0.5"
proptest = "1"
