[package]
name = "ql-time"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "BSD-3-Clause"
repository = "https://github.com/SPRAGE/quantlib-rs"
description = "Date, calendar, day counter, and schedule types for quantlib-rs"

[dependencies]
ql-core.workspace = true
thiserror.workspace = true

[dev-dependencies]
approx.workspace = true
proptest.workspace = true
